--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -26,3 +26,46 @@
 .modal-title{
 	font-weight: bold;
 }
+.modal-footer{
+	border: none;
+	margin-top: 0px;
+	padding-top: 0px;
+	.headermodal{
+		i{
+			color: $coloriconos;
+			font-size: 20px;
+			padding-right: 20px;
+			font-weight: normal;
+		}
+		.btn-primary{
+			i{
+				color: $blanco;
+				padding-right: 5px;
+			}
+			background-color: $colorboton;
+			border: none;
+			margin-left: 350px;
+		}
+	}
+	.segundo{
+		i{
+			color: $coloriconos;
+			background-color: $blanco;
+			font-size: 30px;
+			padding-right: 10px;
+		}
+		button{
+			/*margin-left: 280px;*/
+			background-color: $coloriconos;
+			color: $negro;
+			position: absolute;
+			right: 15px;
+		}
+	}
+}
+.circulo{
+	border: 2px solid red;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+}
